// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetadataTable should correctly render different types of metadata 1`] = `
<TableRow
  data-test="metadata-table-row"
>
  <TableColumn>
    <KeySelect
      defaultValue="tx_id"
      name="key"
      onChange={[Function]}
      onUpdate={[Function]}
      usedKeys={Array []}
    />
  </TableColumn>
  <TableColumn>
    <TableInput
      name="alias"
      onBlur={[Function]}
      onChange={[Function]}
      value="test_alias"
    />
  </TableColumn>
  <TableColumn>
    <Select
      name="type"
      onChange={[Function]}
      onUpdate={[Function]}
      options={
        Array [
          "Text",
          "Date",
          "Language",
          "Region",
        ]
      }
      value="Text"
    />
  </TableColumn>
  <TableColumn>
    <TableInput
      name="textValue"
      onBlur={[Function]}
      onChange={[Function]}
      value="text"
    />
  </TableColumn>
  <TableColumn>
    <DeleteRowButton
      data-test="metadata-delete-row"
      onClick={[Function]}
      size="medium"
    />
  </TableColumn>
</TableRow>
`;

exports[`MetadataTable should correctly render different types of metadata 2`] = `
<TableRow
  data-test="metadata-table-row"
>
  <TableColumn>
    <KeySelect
      defaultValue="iat"
      name="key"
      onChange={[Function]}
      onUpdate={[Function]}
      usedKeys={Array []}
    />
  </TableColumn>
  <TableColumn>
    <TableInput
      name="alias"
      onBlur={[Function]}
      onChange={[Function]}
      value="date_alias"
    />
  </TableColumn>
  <TableColumn>
    <Select
      name="type"
      onChange={[Function]}
      onUpdate={[Function]}
      options={
        Array [
          "Text",
          "Date",
          "Language",
          "Region",
        ]
      }
      value="Date"
    />
  </TableColumn>
  <TableColumn>
    <TableInputDate
      name="dateValue"
      onBlur={[Function]}
      onChange={[Function]}
      type="date"
      value="2018-09-17"
    />
  </TableColumn>
  <TableColumn>
    <DeleteRowButton
      data-test="metadata-delete-row"
      onClick={[Function]}
      size="medium"
    />
  </TableColumn>
</TableRow>
`;

exports[`MetadataTable should correctly render different types of metadata 3`] = `
<TableRow
  data-test="metadata-table-row"
>
  <TableColumn>
    <KeySelect
      defaultValue="iat"
      name="key"
      onChange={[Function]}
      onUpdate={[Function]}
      usedKeys={Array []}
    />
  </TableColumn>
  <TableColumn>
    <TableInput
      name="alias"
      onBlur={[Function]}
      onChange={[Function]}
      value="region_alias"
    />
  </TableColumn>
  <TableColumn>
    <Select
      name="type"
      onChange={[Function]}
      onUpdate={[Function]}
      options={
        Array [
          "Text",
          "Date",
          "Language",
          "Region",
        ]
      }
      value="Region"
    />
  </TableColumn>
  <TableColumn>
    <Select
      name="regionValue"
      onChange={[Function]}
      onUpdate={[Function]}
      options={
        Array [
          "GB_ENG",
          "GB_GBN",
          "GB_NIR",
          "GB_SCT",
          "GB_WLS",
        ]
      }
      value="GB_ENG"
    />
  </TableColumn>
  <TableColumn>
    <DeleteRowButton
      data-test="metadata-delete-row"
      onClick={[Function]}
      size="medium"
    />
  </TableColumn>
</TableRow>
`;

exports[`MetadataTable should correctly render different types of metadata 4`] = `
<TableRow
  data-test="metadata-table-row"
>
  <TableColumn>
    <KeySelect
      defaultValue="iat"
      name="key"
      onChange={[Function]}
      onUpdate={[Function]}
      usedKeys={Array []}
    />
  </TableColumn>
  <TableColumn>
    <TableInput
      name="alias"
      onBlur={[Function]}
      onChange={[Function]}
      value="language_alias"
    />
  </TableColumn>
  <TableColumn>
    <Select
      name="type"
      onChange={[Function]}
      onUpdate={[Function]}
      options={
        Array [
          "Text",
          "Date",
          "Language",
          "Region",
        ]
      }
      value="Language"
    />
  </TableColumn>
  <TableColumn>
    <Select
      name="languageValue"
      onChange={[Function]}
      onUpdate={[Function]}
      options={
        Array [
          "en",
          "cy",
        ]
      }
      value="cy"
    />
  </TableColumn>
  <TableColumn>
    <DeleteRowButton
      data-test="metadata-delete-row"
      onClick={[Function]}
      size="medium"
    />
  </TableColumn>
</TableRow>
`;

exports[`MetadataTable should render 1`] = `
<TableRow
  data-test="metadata-table-row"
>
  <TableColumn>
    <KeySelect
      defaultValue="tx_id"
      name="key"
      onChange={[Function]}
      onUpdate={[Function]}
      usedKeys={Array []}
    />
  </TableColumn>
  <TableColumn>
    <TableInput
      name="alias"
      onBlur={[Function]}
      onChange={[Function]}
      value="test_alias"
    />
  </TableColumn>
  <TableColumn>
    <Select
      name="type"
      onChange={[Function]}
      onUpdate={[Function]}
      options={
        Array [
          "Text",
          "Date",
          "Language",
          "Region",
        ]
      }
      value="Text"
    />
  </TableColumn>
  <TableColumn>
    <TableInput
      name="textValue"
      onBlur={[Function]}
      onChange={[Function]}
      value="text"
    />
  </TableColumn>
  <TableColumn>
    <DeleteRowButton
      data-test="metadata-delete-row"
      onClick={[Function]}
      size="medium"
    />
  </TableColumn>
</TableRow>
`;
